--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://<Ahmad-ayoub>.github.io/<expense-tracker>/",
+  "homepage": "https://Ahmad-ayoub.github.io/expense-tracker/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
